// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cards 1`] = `
<style>
  .skeleton-cards-main {
  margin: var(--ds-size-12);
  display: flex;
  flex-direction: column;
  gap: var(--ds-size-6);
}
.skeleton-cards-button__group {
  display: flex;
  justify-content: end;
}
.skeleton-cards-card__group {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: var(--ds-size-6);
}
.skeleton-cards-card-block {
  display: flex;
  flex-direction: column;
}
</style>
<div>
  <h3 data-size="lg">
    Elever
  </h3>
  <div>
    <button
      data-variant="tertiary"
      type="button"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M3.75 12a8.25 8.25 0 1 1 16.5 0 8.25 8.25 0 0 1-16.5 0M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25m0 4.5a.75.75 0 0 1 .75.75v3.75h3.75a.75.75 0 0 1 0 1.5h-3.75v3.75a.75.75 0 0 1-1.5 0v-3.75H7.5a.75.75 0 0 1 0-1.5h3.75V7.5a.75.75 0 0 1 .75-.75"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Legg til elev
    </button>
    <button
      data-variant="tertiary"
      type="button"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M7 15.25a.75.75 0 0 0 .75-.75V5.31l2.22 2.22a.75.75 0 1 0 1.06-1.06l-3.5-3.5a.75.75 0 0 0-1.06 0l-3.5 3.5a.75.75 0 1 0 1.06 1.06l2.22-2.22v9.19c0 .414.336.75.75.75M16.47 21.03a.75.75 0 0 0 1.06 0l3.5-3.5a.75.75 0 1 0-1.06-1.06l-2.22 2.22V9.5a.75.75 0 0 0-1.5 0v9.19l-2.22-2.22a.75.75 0 1 0-1.06 1.06z"
        >
        </path>
      </svg>
      Sorter
    </button>
    <button
      data-variant="tertiary"
      type="button"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M3.25 7A.75.75 0 0 1 4 6.25h16a.75.75 0 0 1 0 1.5H4A.75.75 0 0 1 3.25 7m3 5a.75.75 0 0 1 .75-.75h10a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M10 16.25a.75.75 0 0 0 0 1.5h4a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Filter
    </button>
  </div>
  <div>
    <div data-variant="default">
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Rita Nordmann
        </span>
      </div>
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Fødselsdato: 12.09.2010
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Trinn: 5.-7. trinn
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Lærer: Nanna Arnestad
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Vurdert: 23.04.2023
        </span>
      </div>
    </div>
    <div data-variant="default">
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Ola Nordmann
        </span>
      </div>
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Fødselsdato: 11.03.2010
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Trinn: 5.-7. trinn
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Lærer: Nanna Arnestad
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Vurdert: 23.04.2023
        </span>
      </div>
    </div>
    <div data-variant="default">
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Kari Nordmann
        </span>
      </div>
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Fødselsdato: 04.12.2010
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Trinn: 5.-7. trinn
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Lærer: Nanna Arnestad
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Vurdert: 23.04.2023
        </span>
      </div>
    </div>
    <div data-variant="default">
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Juliane Nordmann
        </span>
      </div>
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Fødselsdato: 24.04.2010
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Trinn: 5.-7. trinn
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Lærer: Nanna Arnestad
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Vurdert: 23.04.2023
        </span>
      </div>
    </div>
    <div data-variant="default">
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Mateo Nordmann
        </span>
      </div>
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Fødselsdato: 01.05.2010
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Trinn: 5.-7. trinn
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Lærer: Nanna Arnestad
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Vurdert: 23.04.2023
        </span>
      </div>
    </div>
    <div data-variant="default">
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Kai Nordmann
        </span>
      </div>
      <div>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Fødselsdato: 17.05.2010
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Trinn: 5.-7. trinn
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Lærer: Nanna Arnestad
        </span>
        <span
          aria-hidden="true"
          data-text="-"
          data-variant="text"
        >
          Vurdert: 23.04.2023
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Children 1`] = `
<span
  aria-hidden="true"
  data-variant="rectangle"
>
  <p data-variant="default">
    Her er en tekst som blir sendt inn som barn av en Skeleton.
  </p>
  <p data-variant="default">
    Se hvordan Skeleton da dekker den samlede bredden og høyden til barna.
  </p>
  <button
    data-variant="primary"
    type="button"
  >
    Knapp
  </button>
</span>
`;

exports[`Components 1`] = `
<style>
  .skeleton-components-main {
  display: flex;
  align-items: center;
  gap: 20px;
}
</style>
<div>
  <span
    aria-hidden="true"
    data-variant="circle"
    style="<removed>"
  >
  </span>
  <span
    aria-hidden="true"
    data-variant="rectangle"
    style="<removed>"
  >
  </span>
  <p data-variant="default">
    <span
      aria-hidden="true"
      data-text="----------"
      data-variant="text"
    >
    </span>
  </p>
</div>
`;

exports[`Preview 1`] = `
<span
  aria-hidden="true"
  data-variant="rectangle"
  style="<removed>"
>
</span>
`;

exports[`Text 1`] = `
<style>
  .skeleton-text-main {
  display: flex;
  gap: var(--ds-size-12);
  margin: var(--ds-size-12);
}
.skeleton-text-section {
  flex: 1 1 200px;
}
</style>
<div>
  <div>
    <h2>
      Den kjekkaste leiken
    </h2>
    <p
      data-variant="default"
      data-size="sm"
    >
      Det er verken dyrt eller komplisert å leggje til rette for den leiken barna liker best. Når viser barna mest trivsel i uteleiken? Det ønskte forskarar i forskingsprosjektet «EnCompetence» å finne ut, og dei ville spesielt sjå på situasjonar med fysisk aktivitet.
    </p>
  </div>
  <div>
    <h2>
      <span
        aria-hidden="true"
        data-text="-"
        data-variant="text"
      >
        Den kjekkaste leiken
      </span>
    </h2>
    <p
      data-variant="default"
      data-size="sm"
    >
      <span
        aria-hidden="true"
        data-text="-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
        data-variant="text"
      >
      </span>
    </p>
  </div>
</div>
`;

exports[`Usage Example 1`] = `
<style>
  .skeleton-usage-example-main {
  display: flex;
  gap: var(--ds-size-12);
  margin: var(--ds-size-12);
}
.skeleton-usage-example-section {
  flex: 1 1 200px;
}
.skeleton-usage-example-meta {
  display: flex;
  gap: var(--ds-size-2);
  align-items: center;
  padding-block: var(--ds-size-1);
}
.skeleton-usage-example-image {
  display: block;
  width: 100%;
  height: 200px;
  object-fit: cover;
  border-radius: 10px;
}
</style>
<div>
  <div>
    <span
      aria-hidden="true"
      data-variant="rectangle"
      style="<removed>"
    >
    </span>
    <h2>
      <span
        aria-hidden="true"
        data-text="---------------"
        data-variant="text"
      >
      </span>
    </h2>
    <div>
      <span
        aria-hidden="true"
        data-variant="circle"
        style="<removed>"
      >
      </span>
      <span
        aria-hidden="true"
        data-text="-"
        data-variant="text"
      >
        Forfatter | sist endret
      </span>
    </div>
    <span
      aria-hidden="true"
      data-text="--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
      data-variant="text"
    >
    </span>
  </div>
  <div>
    <img
      alt="Bøker på et bord"
      src="https://images.unsplash.com/photo-1516383607781-913a19294fd1?q=80&amp;w=2374&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    >
    <h2>
      Undersøke
    </h2>
    <div>
      <span
        data-variant="circle"
        data-initials="KN"
        role="img"
        aria-label="Kari Nordmann"
        data-size="xs"
      >
      </span>
      <p data-variant="default">
        Kari Nordmann | 27.06.2025
      </p>
    </div>
    <p data-variant="default">
      Barnehagen er pliktig til å gjennomføre undersøkelser som med rimelighet kan forventes. Barnehagen må innhente nok informasjon til å avdekke hva som er problemet og hva som gjør at barnet ikke har det trygt og godt.
    </p>
  </div>
</div>
`;
